descomplicando-kubernetes/day-11/ingress-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: giropops-senhas-static
spec:
  rules:
  - http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port: 
              number: 5000
