descomplicando-kubernetes/day-11/ingress-5.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: gripops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: giropops-senhas.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: gripops-senhas
            port: 
              number: 5000
